--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jshint": "^2.8.0"
   },
   "scripts": {
-    "jshint": "node node_modules/jshint/bin/jshint src"
+    "jshint": "node node_modules/jshint/bin/jshint src",
+    "test": "npm run jshint"
   },
   "engines": {
     "node": ">=4.0.0",
