CB-12895 : setup eslint and removed jshint

--- a/package.json
+++ b/package.json
@@ -26,11 +26,17 @@
     "shelljs": "^0.5.3"
   },
   "devDependencies": {
-    "jshint": "^2.8.0"
+    "eslint": "^4.0.0",
+    "eslint-config-semistandard": "^11.0.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-node": "^5.0.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1"
   },
   "scripts": {
-    "jshint": "node node_modules/jshint/bin/jshint src",
-    "test": "npm run jshint"
+    "eslint": "node node_modules/eslint/bin/eslint src ",
+    "test": "npm run eslint"
   },
   "engines": {
     "node": ">=4.0.0",
