--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cordova-serve",
   "version": "1.0.2-dev",
   "description": "Apache Cordova server support for cordova-lib and cordova-browser.",
-  "main": "serve.js",
+  "main": "src/main.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/apache/cordova-lib"
@@ -22,6 +22,7 @@
     "chalk": "^1.1.1",
     "compression": "^1.6.0",
     "express": "^4.13.3",
+    "open": "0.0.5",
     "q": "^1.4.1",
     "shelljs": "^0.5.3"
   },
