--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "devDependencies": {
     "jasmine": "^2.5.2",
-    "jshint": "^2.8.0"
+    "jshint": "^2.8.0",
+    "rewire": "^2.5.2"
   },
   "engines": {
     "node": ">=4.0.0",
