--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apache/cordova-lib"
+    "url": "https://github.com/apache/cordova-serve"
   },
   "keywords": [
     "cordova",
