--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "chalk": "^1.1.1",
     "compression": "^1.6.0",
     "express": "^4.13.3",
-    "open": "0.0.5",
+    "opn": "^5.3.0",
     "shelljs": "^0.5.3"
   },
   "devDependencies": {
