--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-serve",
-  "version": "2.0.1-dev",
+  "version": "2.0.1",
   "description": "Apache Cordova server support for cordova-lib and cordova-browser.",
   "main": "src/main.js",
   "scripts": {
