--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "opn": "^5.3.0",
-    "shelljs": "^0.5.3"
+    "which": "^1.3.0"
   },
   "devDependencies": {
     "jasmine": "^2.5.2",
