--- a/package.json
+++ b/package.json
@@ -24,22 +24,22 @@
     "email": "dev@cordova.apache.org"
   },
   "dependencies": {
-    "chalk": "^1.1.1",
+    "chalk": "^2.4.1",
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "opn": "^5.3.0",
-    "shelljs": "^0.5.3"
+    "which": "^1.3.0"
   },
   "devDependencies": {
-    "jasmine": "^2.5.2",
-    "eslint": "^4.0.0",
-    "eslint-config-semistandard": "^11.0.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-node": "^5.0.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "rewire": "^2.5.2"
+    "jasmine": "^3.3.0",
+    "eslint": "^5.0.0",
+    "eslint-config-semistandard": "^13.0.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "rewire": "^4.0.1"
   },
   "engines": {
     "node": ">= 6",
