--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Apache Cordova server support for cordova-lib and cordova-browser.",
   "main": "src/main.js",
   "scripts": {
-    "jasmine": "jasmine JASMINE_CONFIG_PATH=spec/jasmine.json",
     "lint": "eslint .",
-    "test": "npm run lint && npm run jasmine"
+    "test": "npm run lint && npm run test:unit",
+    "test:unit": "jasmine \"spec/**/*.spec.js\""
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@cordova/eslint-config": "^2.0.0",
-    "jasmine": "^3.3.0",
+    "jasmine": "^3.5.0",
     "rewire": "^4.0.1"
   },
   "engines": {
