--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "email": "dev@cordova.apache.org"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chalk": "^2.4.1",
     "compression": "^1.6.0",
     "express": "^4.13.3",
