--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "test": "npm run lint && npm run test:unit",
     "test:unit": "jasmine \"spec/**/*.spec.js\""
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/apache/cordova-serve"
-  },
+  "repository": "github:apache/cordova-serve",
+  "bugs": "https://github.com/apache/cordova-serve/issues",
   "keywords": [
     "cordova",
     "server",
@@ -19,10 +17,6 @@
   ],
   "author": "Apache Software Foundation",
   "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://issues.apache.org/jira/browse/CB",
-    "email": "dev@cordova.apache.org"
-  },
   "dependencies": {
     "chalk": "^3.0.0",
     "compression": "^1.7.4",
