--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "chalk": "^3.0.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "opn": "^6.0.0",
+    "open": "^7.0.3",
     "which": "^2.0.2"
   },
   "devDependencies": {
