serve-4.0.0 Updated version and RELEASENOTES.md for release 4.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-serve",
-  "version": "4.0.0-dev",
+  "version": "4.0.0",
   "description": "Apache Cordova server support for cordova-lib and cordova-browser.",
   "main": "src/main.js",
   "scripts": {
