chore: bump node

--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "rewire": "^5.0.0"
   },
   "engines": {
-    "node": ">= 10",
-    "npm": ">= 5.6.0"
+    "node": ">=20.5.0"
   },
   "nyc": {
     "all": true,
