--- a/package.json
+++ b/package.json
@@ -19,21 +19,20 @@
   "author": "Apache Software Foundation",
   "license": "Apache-2.0",
   "dependencies": {
-    "chalk": "^3.0.0",
+    "chalk": "^4.1.2",
     "compression": "^1.7.4",
-    "express": "^4.17.1",
-    "open": "^7.0.3",
-    "which": "^2.0.2"
+    "express": "^5.1.0",
+    "open": "^10.2.0",
+    "which": "^5.0.0"
   },
   "devDependencies": {
-    "@cordova/eslint-config": "^3.0.0",
-    "jasmine": "^3.5.0",
-    "nyc": "^15.0.0",
-    "rewire": "^5.0.0"
+    "@cordova/eslint-config": "^5.1.0",
+    "jasmine": "^5.8.0",
+    "nyc": "^17.1.0",
+    "rewire": "^9.0.0"
   },
   "engines": {
-    "node": ">= 10",
-    "npm": ">= 5.6.0"
+    "node": ">=20.5.0"
   },
   "nyc": {
     "all": true,
