--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint .",
     "test": "npm run lint && npm run cover",
     "test:unit": "jasmine \"spec/**/*.spec.js\"",
-    "cover": "nyc npm run test:unit"
+    "cover": "c8 npm run test:unit"
   },
   "repository": "github:apache/cordova-serve",
   "bugs": "https://github.com/apache/cordova-serve/issues",
@@ -20,21 +20,21 @@
   "license": "Apache-2.0",
   "dependencies": {
     "chalk": "^4.1.2",
-    "compression": "^1.7.4",
+    "compression": "^1.8.1",
     "express": "^5.1.0",
     "open": "^10.2.0",
     "which": "^5.0.0"
   },
   "devDependencies": {
     "@cordova/eslint-config": "^5.1.0",
-    "jasmine": "^5.8.0",
-    "nyc": "^17.1.0",
-    "rewire": "^9.0.0"
+    "c8": "^10.1.3",
+    "jasmine": "^5.9.0",
+    "rewire": "^9.0.1"
   },
   "engines": {
     "node": ">=20.5.0"
   },
-  "nyc": {
+  "c8": {
     "all": true,
     "exclude": [
       "coverage/",
