--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "author": "Apache Software Foundation",
   "license": "Apache-2.0",
   "dependencies": {
-    "chalk": "^4.1.2",
     "compression": "^1.8.1",
     "express": "^5.1.0",
     "open": "^10.2.0",
@@ -32,7 +31,7 @@
     "rewire": "^9.0.1"
   },
   "engines": {
-    "node": ">=20.9.0"
+    "node": ">=20.12.0 || >=21.7.0"
   },
   "c8": {
     "all": true,
