--- a/.npmrc
+++ b/.npmrc
@@ -15,6 +15,4 @@
 # specific language governing permissions and limitations
 # under the License.
 
-.git/
-coverage/
-node_modules/
+registry=https://registry.npmjs.org
